<resources>
    <!--    Figure 1 String Values -->
    <string name="app_name">Order Management System</string>
    <string name="product_name">Product Name</string>
    <string name="group_product">Group Product</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="category">Category</string>
    <string name="design">Design</string>
    <string name="hsn">HSN</string>
    <string name="ornament_details">Ornament Details</string>
    <string name="purity">Purity</string>
    <string name="_92_16">92.16 %</string>
    <string name="purchase_wastage">Purchase Wastage</string>
    <string name="_2_5">2.5 %</string>
    <string name="min_stock">Min Stock</string>
    <string name="sales_details">Sales Details</string>
    <string name="wastage_r">Wastage (R)</string>
    <string name="_3">3 %</string>
    <string name="wastage_w">Wastage (W)</string>
    <string name="_6">6 %</string>
    <string name="making_rate_r">Making Rate (R)</string>
    <string name="making_rate_w">Making Rate (W)</string>
    <string name="_new">New</string>
    <string name="save_amp_proceed"><![CDATA[Save & Proceed]]></string>
    <string name="confirm_amp_proceed"><![CDATA[Confirm & Proceed]]></string>

    <!--    Figure 2 String Values -->
    <string name="product_name_amp_qr_code"><![CDATA[Product Name & QR Code]]></string>
    <string name="quantity">QUANTITY</string>
    <string name="value">Value</string>
    <string name="weight_gms">WEIGHT (GMS)</string>
    <string name="less_weight_gms">LESS WEIGHT (GMS)</string>
    <string name="add_weight_gms">ADD WEIGHT (GMS)</string>
    <string name="net_weight_gms">Net WEIGHT (GMS)</string>
    <string name="sale_less_weight_gms">Sale LESS WEIGHT (GMS)</string>
    <string name="item_size">ITEM SIZE</string>
    <string name="hallmark">HALLMARK</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <!--    Figure 3 String Values-->
    <string name="edit">Edit</string>
    <string name="qr_code">QR-Code</string>
    <string name="symbol_bar">|</string>
    <string name="g_wt">G. Wt</string>
    <string name="less_wt">Less Wt</string>
    <string name="net_wt">Net Wt</string>
    <string name="size">Size</string>
    <string name="print_qr">Print QR</string>

    <!--    Figure 4 String Values-->
    <string name="party_type">Party Type</string>
    <string name="access_app">Access App</string>
    <string name="branch_name">Branch Name</string>
    <string name="pan">PAN</string>
    <string name="gst">GST</string>
    <string name="credit_days">Credit Days</string>
    <string name="reference">Reference</string>
    <string name="e_mail">E-mail</string>
    <string name="contact_no">Contact No</string>
    <string name="address">Address</string>
    <string name="party_name">Party Name</string>
    <string name="save">Save</string>
    <string name="proceed">Proceed</string>
    <string name="exit">Exit</string>

    <!--    Figure 6 String Values-->
    <string name="vendor_list">Vendor List</string>
    <string name="customer_list">Customer List</string>
    <string name="edit_or_print_qr">Edit | Print QR</string>
    <string name="order_number">Order Number</string>
    <string name="eg_order_no">eg. gld1234</string>
    <string name="order_date">Order Date</string>
    <string name="eg_date"> 01/01/1999</string>
    <string name="btn_proceed_to_gallery">Proceed to Gallery</string>

    <string-array name="partyType">
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
        <item>Type 4</item>
    </string-array>

    <string-array name="Category">
        <item>Select Category</item>
        <item>category-1</item>
        <item>category-2</item>
        <item>category-3</item>
    </string-array>

    <string-array name="Design">
        <item>Select Design</item>
        <item>design-1</item>
        <item>design-2</item>
        <item>design-3</item>
        <item>design-4</item>
    </string-array>

    <string-array name="HSN">
        <item>Select HSN</item>
        <item>HSN-1</item>
        <item>HSN-2</item>
        <item>HSN-3</item>
        <item>HSN-4</item>
    </string-array>

    <string-array name="minStockUnits">
        <item>Unit</item>
        <item>gms</item>
        <item>kg</item>
    </string-array>

    <string-array name="MakingRateRUnits">
        <item>Unit</item>
        <item>gms</item>
        <item>kg</item>
    </string-array>

    <string-array name="MakingRateWUnits">
        <item>Unit</item>
        <item>gms</item>
        <item>kg</item>
    </string-array>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signup">Not yet registered? SignUp Now</string>
    <string name="forget_password">Forget Password?</string>
    <string name="qty">Qty</string>
    <string name="select_date">Select Date</string>
    <string name="quantity_left_0">Quantity Left: 0</string>
    <string name="selected_products">Selected Products</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="address_field">House No., Area, Colony, City</string>
    <string name="landmark">Landmark</string>
    <string name="pincode">Pincode</string>


</resources>