<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ProductNameAndQRCode">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/violet"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/productNameAndQRCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name_amp_qr_code"
                    android:textColor="@color/orange"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_20ssp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:layout_weight="1"
                        android:textSize="@dimen/_15ssp"
                        android:textColor="@color/white"/>

                    <EditText
                        android:id="@+id/quantityValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15ssp"
                        android:layout_weight="2"
                        android:inputType="number"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/weight_gms"
                        android:layout_weight="1"
                        android:textSize="@dimen/_15ssp"
                        android:textColor="@color/white"/>

                    <EditText
                        android:id="@+id/weightValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15ssp"
                        android:layout_weight="2"
                        android:inputType="numberDecimal"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/lessWeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/less_weight_gms"
                        android:textSize="@dimen/_15ssp"
                        android:textColor="@color/white"
                        android:layout_weight="1"/>

                    <EditText
                        android:id="@+id/lessWeightValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15ssp"
                        android:inputType="numberDecimal"
                        android:textColor="@color/white"
                        android:layout_weight="2"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/addWeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_weight_gms"
                        android:textSize="@dimen/_15ssp"
                        android:textColor="@color/white"
                        android:layout_weight="1"/>

                    <EditText
                        android:id="@+id/addWeightValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15ssp"
                        android:layout_weight="2"
                        android:inputType="numberDecimal"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/netWeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/net_weight_gms"
                        android:textSize="@dimen/_15ssp"
                        android:textColor="@color/white"
                        android:layout_weight="1"/>

                    <EditText
                        android:id="@+id/netWeightValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15ssp"
                        android:inputType="numberDecimal"
                        android:textColor="@color/white"
                        android:layout_weight="2"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/saleLessWeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sale_less_weight_gms"
                        android:textSize="@dimen/_15ssp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:layout_marginEnd="20dp"/>

                    <EditText
                        android:id="@+id/saleLessWeightValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15ssp"
                        android:inputType="numberDecimal"
                        android:textColor="@color/white"
                        android:layout_weight="2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/itemSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_size"
                        android:textSize="@dimen/_15ssp"
                        android:textColor="@color/white"
                        android:layout_weight="1"/>

                    <EditText
                        android:id="@+id/itemSizeValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15ssp"
                        android:textColor="@color/white"
                        android:layout_weight="2"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/hallMark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hallmark"
                        android:textSize="@dimen/_15ssp"
                        android:textColor="@color/white"
                        android:layout_weight="1"/>

                    <EditText
                        android:id="@+id/hallMarkValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15ssp"
                        android:textColor="@color/white"
                        android:layout_weight="2"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:src="@drawable/ic_baseline_image_24"
                        android:layout_weight="1"
                        android:contentDescription="Image" />

                    <TextView
                        android:id="@+id/txtViewCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="@string/camera"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15ssp"
                        android:layout_weight="1" /> />

                    <TextView
                        android:id="@+id/txtViewGallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gallery"
                        android:clickable="true"
                        android:textSize="@dimen/_15ssp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:gravity="center">

                <Button
                    android:id="@+id/btnNewProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_new"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/violet"
                    android:layout_marginEnd="@dimen/_12sdp"/>

                <Button
                    android:id="@+id/btnSaveProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="@color/white"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:backgroundTint="@color/violet"/>

                <Button
                    android:id="@+id/btnPrintQR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_qr"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_15ssp"
                    android:backgroundTint="@color/violet"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>