<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".OrderPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/violet"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_number"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_number"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"/>

            <EditText
                android:id="@+id/order_number_value"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/eg_order_no"
                android:textColor="@color/white"
                android:textColorHint="@color/off_white"
                android:textSize="@dimen/_15ssp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_date"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_date"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"/>

            <EditText
                android:id="@+id/order_date_value"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/select_date"
                android:textColor="@color/white"
                android:textColorHint="@color/off_white"
                android:textSize="@dimen/_15ssp"
                android:inputType="none"
                android:focusable="false"/>

        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="386dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/order_date"-->
<!--                android:layout_width="@dimen/_126sdp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/order_date"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="@dimen/_15ssp" />-->

<!--            <TextView-->
<!--                android:id="@+id/order_date_value"-->
<!--                android:layout_width="194dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginEnd="@dimen/_10sdp"-->
<!--                android:layout_weight="1"-->
<!--                android:hint="@string/eg_date"-->
<!--                android:paddingStart="@dimen/_4sdp"-->
<!--                android:textColor="@color/white"-->
<!--                android:textColorHint="@color/off_white"-->
<!--                android:textSize="@dimen/_15ssp" />-->

<!--        </LinearLayout>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnProceedToGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/violet"
            android:layout_gravity="center_vertical"
            android:text="@string/btn_proceed_to_gallery"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>

</LinearLayout>